--- a/app/index.html
+++ b/app/index.html
@@ -240,9 +240,156 @@
         <div class="schedule-wrapper">
           <h2 class="section-title">Programação</h2>
 
-          Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai. Só digo uma coisa, Domingo ela não vai! Danadaa!! Vem minha odalisca, agora faz essa cobra coral subir!!! Pau que nasce torto, Nunca se endireita. Tchannn!! Tchannn!! Tu du du pááá! Eu gostchu muitchu, heinn! danadinha! Mainhaa! Agora use meu lorem ipsum ordinária!!! Olha o quibeee! rema, rema, ordinária!.
+          <div id="cd-timeline">
+            <div class="cd-timeline-wrapper">
+              <div class="cd-timeline-block-custom">
+                <div class="cd-timeline-circle">
+                </div>
+                <div class="cd-timeline-time">
+                  08h00
+                </div>
+                <div class="cd-timeline-img">
+                  <!-- <img src="images/trash/speaker.png" alt=""> -->
+                </div> <!-- cd-timeline-img -->
+                <div class="cd-timeline-content">
+                  Credenciamento
+                </div> <!-- cd-timeline-content -->
+              </div> <!-- cd-timeline-block -->
+            </div>
+
+            <div class="cd-timeline-wrapper">
+              <div class="cd-timeline-block">
+                <div class="cd-timeline-circle">
+                </div>
+                <div class="cd-timeline-time">
+                  09h00
+                </div>
+                <div class="cd-timeline-img">
+                  <img src="images/trash/speaker.png" alt="">
+                </div> <!-- cd-timeline-img -->
+
+                <div class="cd-timeline-content">
+                  <h2>Darth Vader</h2>
+                  <p>UX Companion: um glossário para os jargões de UX Design</p>
+                </div> <!-- cd-timeline-content -->
+              </div> <!-- cd-timeline-block -->
+            </div>
+
+            <div class="cd-timeline-wrapper interval lt">
+              <div class="cd-timeline-block">
+                <div class="cd-timeline-circle">
+                </div>
+                <div class="cd-timeline-time">
+                  09h00
+                </div>
+                <div class="cd-timeline-img">
+                  <img src="images/icon-timeline-yellow.png" alt="">
+                </div> <!-- cd-timeline-img -->
+
+                <div class="cd-timeline-content">
+                  LIGHTNING TALKS
+                </div> <!-- cd-timeline-content -->
+              </div> <!-- cd-timeline-block -->
+            </div>
+
+            <div class="cd-timeline-wrapper interval">
+              <div class="cd-timeline-block">
+                <div class="cd-timeline-circle">
+                </div>
+                <div class="cd-timeline-time">
+                  09h00
+                </div>
+                <div class="cd-timeline-img">
+                  <img src="images/icon-timeline-food.png" alt="">
+                </div> <!-- cd-timeline-img -->
+
+                <div class="cd-timeline-content">
+                  Hora do Almoço
+                </div> <!-- cd-timeline-content -->
+              </div> <!-- cd-timeline-block -->
+            </div>
+
+
+            <div class="cd-timeline-wrapper">
+              <div class="cd-timeline-block">
+                <div class="cd-timeline-circle">
+                </div>
+                <div class="cd-timeline-time">
+                  09h00
+                </div>
+                <div class="cd-timeline-img">
+                  <img src="images/trash/speaker.png" alt="">
+                </div> <!-- cd-timeline-img -->
+
+                <div class="cd-timeline-content">
+                  <h2>Luke Skywalker</h2>
+                  <p>Digamos que o tema do palestrante seja grande pa carai e tome mais que quatro linhas do layout.</p>
+                </div> <!-- cd-timeline-content -->
+              </div> <!-- cd-timeline-block -->
+            </div>
+
+            <div class="cd-timeline-wrapper">
+              <div class="cd-timeline-block">
+                <div class="cd-timeline-circle">
+                </div>
+                <div class="cd-timeline-time">
+                  09h00
+                </div>
+                <div class="cd-timeline-img">
+                  <img src="images/trash/speaker.png" alt="">
+                </div> <!-- cd-timeline-img -->
+
+                <div class="cd-timeline-content">
+                  <h2>Luke Skywalker</h2>
+                  <p>Digamos que o tema do palestrante seja grande pa carai e tome mais que quatro linhas do layout.</p>
+                </div> <!-- cd-timeline-content -->
+              </div> <!-- cd-timeline-block -->
+            </div>
+
+            <div class="cd-timeline-wrapper">
+              <div class="cd-timeline-block">
+                <div class="cd-timeline-circle">
+                </div>
+                <div class="cd-timeline-time">
+                  09h00
+                </div>
+                <div class="cd-timeline-img">
+                  <img src="images/trash/speaker.png" alt="">
+                </div> <!-- cd-timeline-img -->
+
+                <div class="cd-timeline-content">
+                  <h2>Luke Skywalker</h2>
+                  <p>Digamos que o tema do palestrante seja grande pa carai e tome mais que quatro linhas do layout.</p>
+                </div> <!-- cd-timeline-content -->
+              </div> <!-- cd-timeline-block -->
+            </div>
+
+            <div class="cd-timeline-wrapper">
+              <div class="cd-timeline-block-custom event-end">
+                <div class="cd-timeline-circle">
+                </div>
+                <div class="cd-timeline-time">
+                  08h00
+                </div>
+                <div class="cd-timeline-img">
+                  <!-- <img src="images/trash/speaker.png" alt=""> -->
+                </div> <!-- cd-timeline-img -->
+                <div class="cd-timeline-content">
+                  SORTEIOS, ENCERRAMENTO E FESTA!
+                </div> <!-- cd-timeline-content -->
+              </div> <!-- cd-timeline-block -->
+            </div>
+
+          </div>
+
         </div>
         <div class="top-cloud"></div>
+        <!-- <div class="bottom-cloud"></div> -->
+      </section>
+
+      <section class="lightningtalks" id="lightningtalks">
+        Moon
+
         <div class="bottom-cloud"></div>
       </section>
 
