--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@
         <li><a href="#home" du-smooth-scroll du-scrollspy offset="30">Inicio</a></li>
         <li><a href="#speakers" du-smooth-scroll du-scrollspy offset="30">Palestrantes</a></li>
         <li><a href="#schedule" du-smooth-scroll du-scrollspy offset="-30">Programação</a></li>
-        <li><a href="#speakers" du-smooth-scroll du-scrollspy offset="30">Lightning-talks</a></li>
+        <li><a href="#lightningtalks" du-smooth-scroll du-scrollspy offset="250">Lightning-talks</a></li>
         <li><a href="#location" du-smooth-scroll du-scrollspy offset="80">Local</a></li>
         <li><a href="#workshop" du-smooth-scroll du-scrollspy offset="80">Workshop</a></li>
         <li><a href="#sponsors" du-smooth-scroll du-scrollspy offset="30">Patrocínio</a></li>
@@ -388,7 +388,19 @@
       </section>
 
       <section class="lightningtalks" id="lightningtalks">
-        Moon
+        <div class="moon-wrapper">
+          <div class="moon">
+            <div class="moon-content">
+            Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai. Só digo uma coisa, Domingo ela não vai! Danadaa!! Vem minha odalisca, agora faz essa cobra coral subir!!! Pau que nasce torto, Nunca se endireita. Tchannn!! Tchannn!! Tu du du pááá! Eu gostchu muitchu, heinn! danadinha! Mainhaa! Agora use meu lorem ipsum ordinária!!! Olha o quibeee! rema, rema, ordinária!.
+            </div>
+          </div>
+          <div class="moon-overlay-bg">
+            <div class="earth"></div>
+            <div class="rocket"></div>
+            <div class="astronaut"></div>
+          </div>
+
+        </div>
 
         <div class="bottom-cloud"></div>
       </section>
