--- a/app/index.html
+++ b/app/index.html
@@ -384,14 +384,58 @@
 
         </div>
         <div class="top-cloud"></div>
-        <!-- <div class="bottom-cloud"></div> -->
       </section>
 
       <section class="lightningtalks" id="lightningtalks">
         <div class="moon-wrapper">
           <div class="moon">
             <div class="moon-content">
-            Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai. Só digo uma coisa, Domingo ela não vai! Danadaa!! Vem minha odalisca, agora faz essa cobra coral subir!!! Pau que nasce torto, Nunca se endireita. Tchannn!! Tchannn!! Tu du du pááá! Eu gostchu muitchu, heinn! danadinha! Mainhaa! Agora use meu lorem ipsum ordinária!!! Olha o quibeee! rema, rema, ordinária!.
+              <h2 class="section-title">Lightning Talk</h2>
+              <div class="lt-description">
+                Você pode participar do Alagoas Dev Day com um Lightning Talk de 20 minutos.
+Serão 03 ideias escolhidas por voto popular. Os Lightning Talks foram divididos em 03 categorias (front-end, back-end e design) Submeta sua ideia e fique na torcida.
+              </div>
+              <ul class="lt-list">
+                <li>
+                  <div class="lt-picture">
+                    <img src="images/trash/lt-speaker.png" alt="">
+                  </div>
+                  <div class="label">
+                      <a href="#">Envie sua proposta</a>
+                  </div>
+                  <h3>Lightning Talk - Front-end</h3>
+                  <p>
+                    Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai.
+                  </p>
+                </li>
+                <li>
+                  <div class="lt-picture">
+                    <img src="images/trash/lt-speaker.png" alt="">
+                  </div>
+                  <div class="label">
+                      <a href="#">Envie sua proposta</a>
+                  </div>
+                  <h3>Lightning Talk - Front-end</h3>
+                  <p>
+                    Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai.
+                  </p>
+                </li>
+                <li class="confirmed">
+                  <div class="lt-picture">
+                    <img src="images/trash/lt-speaker.png" alt="">
+                  </div>
+                  <div class="label">
+                    lightning talk confirmado
+                  </div>
+                  <h3>Lightning Talk - Front-end</h3>
+                  <p>
+                    Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai.
+                  </p>
+                </li>
+              </ul>
+              <div class="lt-obs">
+                *Custos referentes a deslocamento e hospedagens não são de responsabilidade da comissão organizadora do evento.
+              </div>
             </div>
           </div>
           <div class="moon-overlay-bg">
