--- a/app/index.html
+++ b/app/index.html
@@ -456,7 +456,27 @@ Serão 03 ideias escolhidas por voto popular. Os Lightning Talks foram divididos
           <div class="location-box">
             <div class="contact-info">
               <div class="contact-box">
-                <img src="images/contato-logo.png" alt="">
+                <img src="images/contato-logo.png" class="logo-contato" alt="">
+                <div class="address">
+                  <img src="images/big-pin.png" alt="">
+                  Rua Prof. Silvio de Macedo, 125, <br>
+                  Jatiúca, Maceió - AL
+                </div>
+                <h3>Vem de fora?</h3>
+                <p class="outside-description">
+                  Separamos algumas alcomodações para facilitar sua vida. <br> Escolha de acordo com o seu orçamento e curta o evento e Maceió.
+                </p>
+                <ul class="hotel-list">
+                  <li>
+                    <a href="#">Alagoas Hostel <span class="money"></span></a>
+                  </li>
+                  <li>
+                    <a href="#">Pousada Praia Verde <span class="money"></span> <span class="money"></span></a>
+                  </li>
+                  <li>
+                    <a href="#">Maceió Atlantic Suites <span class="money"></span> <span class="money"></span> <span class="money"></span></a>
+                  </li>
+                </ul>
               </div>
             </div>
             <div class="map">
