--- a/app/index.html
+++ b/app/index.html
@@ -480,7 +480,7 @@ Serão 03 ideias escolhidas por voto popular. Os Lightning Talks foram divididos
               </div>
             </div>
             <div class="map">
-              <iframe width="100%" height="660px" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Contato%20Macei%C3%B3&key=AIzaSyCf-MPZCV7b8OhBPMiV0GwnW15w2lMzw0Q"></iframe>
+              <iframe width="100%" height="660px" style="pointer-events:none;" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Contato%20Macei%C3%B3&key=AIzaSyCf-MPZCV7b8OhBPMiV0GwnW15w2lMzw0Q"></iframe>
             </div>
           </div>
         </div>
@@ -491,7 +491,25 @@ Serão 03 ideias escolhidas por voto popular. Os Lightning Talks foram divididos
         <div class="workshop-wrapper">
           <h2 class="section-title">Workshop</h2>
 
-          Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai. Só digo uma coisa, Domingo ela não vai! Danadaa!! Vem minha odalisca, agora faz essa cobra coral subir!!! Pau que nasce torto, Nunca se endireita. Tchannn!! Tchannn!! Tu du du pááá! Eu gostchu muitchu, heinn! danadinha! Mainhaa! Agora use meu lorem ipsum ordinária!!! Olha o quibeee! rema, rema, ordinária!.
+          <div class="content-workshop-presenter">
+            <div class="float-circle"></div>
+            <img src="images/trash/workshop.png" alt="">
+          </div>
+          <div class="workshop-info">
+            <h3>Título do Workshop</h3>
+            <span class="presenter-name">Com tom Preston-Werner</span>
+          </div>
+
+          <div class="workshop-subscription">
+            <ul>
+              <li>
+                <a href="#">Conteúdo Programático</a>
+              </li>
+              <li>
+                <a href="#">Increva-se Agora</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
 
