--- a/app/index.html
+++ b/app/index.html
@@ -517,7 +517,31 @@ Serão 03 ideias escolhidas por voto popular. Os Lightning Talks foram divididos
         <div class="register-wrapper">
           <h2 class="section-title">Inscreva-se Já!</h2>
 
-          Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai. Só digo uma coisa, Domingo ela não vai! Danadaa!! Vem minha odalisca, agora faz essa cobra coral subir!!! Pau que nasce torto, Nunca se endireita. Tchannn!! Tchannn!! Tu du du pááá! Eu gostchu muitchu, heinn! danadinha! Mainhaa! Agora use meu lorem ipsum ordinária!!! Olha o quibeee! rema, rema, ordinária!.
+          <ul class="register-price-list clearfix">
+            <li>
+              <div class="register-header-box">
+                Lote 01
+                <span class="ending">Acabando!</span>
+              </div>
+              <span class="price">R$45</span> <br>
+              <span class="valid">Válido até 25/fev</span>
+            </li>
+            <li class="disabled">
+              <div class="register-header-box">
+                Lote 02
+              </div>
+              <span class="price">R$55</span> <br>
+              <span class="valid">Válido até 25/mar</span>
+            </li>
+            <li>
+              <div class="register-header-box">
+                Lote 03
+              </div>
+              <span class="price">R$65</span> <br>
+              <span class="valid">Válido até 25/mar</span>
+            </li>
+          </ul>
+          <a href="#" class="register-now">Inscreva-se agora</a>
         </div>
       </section>
 
