--- a/app/index.html
+++ b/app/index.html
@@ -556,9 +556,107 @@ Serão 03 ideias escolhidas por voto popular. Os Lightning Talks foram divididos
         <div class="organizers-wrapper">
           <h2 class="section-title">Organizadores</h2>
 
-          Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai. Só digo uma coisa, Domingo ela não vai! Danadaa!! Vem minha odalisca, agora faz essa cobra coral subir!!! Pau que nasce torto, Nunca se endireita. Tchannn!! Tchannn!! Tu du du pááá! Eu gostchu muitchu, heinn! danadinha! Mainhaa! Agora use meu lorem ipsum ordinária!!! Olha o quibeee! rema, rema, ordinária!.
+        <ul class="organizers-list clearfix">
+          <li>
+            <img src="images/organizer-mac.jpg" alt="">
+            <span class="name">Mac Giovanni</span>
+            <span class="job">Front-end</span>
+
+            <ul class="social-links">
+              <li class="twitter">
+                <a href="https://twitter.com/maclevison" target="_blank">Twitter</a>
+              </li>
+              <li class="facebook">
+                <a href="https://www.facebook.com/macgiovanni" target="_blank">Facebook</a>
+              </li>
+              <li class="linkedin">
+                <a href="https://www.linkedin.com/in/maclevison" target="_blank">LinkedIn</a>
+              </li>
+            </ul>
+          </li>
+
+          <li>
+            <img src="images/organizer-ivan.jpg" alt="">
+            <span class="name">Ivan <br> Santos</span>
+            <span class="job">Front-end</span>
+
+            <ul class="social-links">
+              <li class="twitter">
+                <a href="https://twitter.com/pragmaticivan" target="_blank">Twitter</a>
+              </li>
+              <li class="facebook">
+                <a href="https://www.facebook.com/pragmaticivan" target="_blank">Facebook</a>
+              </li>
+              <li class="linkedin">
+                <a href="https://www.linkedin.com/in/pragmaticivan" target="_blank">LinkedIn</a>
+              </li>
+            </ul>
+          </li>
+
+          <li>
+            <img src="images/organizer-hugo.jpg" alt="">
+            <span class="name">Hugo Oliveira</span>
+            <span class="job">Conteúdo</span>
+
+            <ul class="social-links">
+              <li class="twitter">
+                <a href="https://twitter.com/oliveira_hugo" target="_blank">Twitter</a>
+              </li>
+              <li class="facebook">
+                <a href="https://www.facebook.com/oliveirahugo12" target="_blank">Facebook</a>
+              </li>
+              <li class="linkedin">
+                <a href="https://www.linkedin.com/in/hugooliveira12" target="_blank">LinkedIn</a>
+              </li>
+            </ul>
+          </li>
+
+          <li>
+            <img src="images/organizer-gustavo.jpg" alt="">
+            <span class="name">Gustavo Cunha</span>
+            <span class="job">Back-end</span>
+
+            <ul class="social-links">
+              <li class="twitter">
+                <a href="https://twitter.com/gmmcal" target="_blank">Twitter</a>
+              </li>
+              <li class="facebook">
+                <a href="https://www.facebook.com/gmmcal" target="_blank">Facebook</a>
+              </li>
+              <li class="linkedin">
+                <a href="https://www.linkedin.com/in/gmmcal" target="_blank">LinkedIn</a>
+              </li>
+            </ul>
+          </li>
+
+          <li>
+            <img src="images/organizer-carlyson.jpg" alt="">
+            <span class="name">Carlyson Oliveira</span>
+            <span class="job">UI e UX Designer</span>
+
+            <ul class="social-links">
+              <li class="twitter">
+                <a href="https://twitter.com/carlyson" target="_blank">Twitter</a>
+              </li>
+              <li class="facebook">
+                <a href="https://www.facebook.com/carlyson" target="_blank">Facebook</a>
+              </li>
+              <li class="linkedin">
+                <a href="https://www.linkedin.com/in/carlyson" target="_blank">LinkedIn</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+
+        <div class="organizers-contact-info">
+          <h2>Quer falar conosco? Manda ver!</h2>
+          <a href="">82 3317.7586</a> | <a href="mailto:contato@alagoasdevday.com.br">contato@alagoasdevday.com.br</a>
+        </div>
+
         </div>
         <div class="top-cloud"></div>
+
+
       </section>
     </div>
 
