fix bg organizers

--- a/app/index.html
+++ b/app/index.html
@@ -553,6 +553,9 @@ Serão 03 ideias escolhidas por voto popular. Os Lightning Talks foram divididos
       </section>
 
       <section class="organizers" id="organizers">
+
+        <div class="satelite"></div>
+
         <div class="organizers-wrapper">
           <h2 class="section-title">Organizadores</h2>
 
