--- a/app/index.html
+++ b/app/index.html
@@ -146,90 +146,164 @@
           <h2 class="section-title">Palestrantes</h2>
 
           <ul class="speaker-list">
+
             <li class="speaker-item">
               <div class="speaker-profile-picture">
-                <div class="hover-profile-picture" style="background: rgba(26, 188, 156, 0.5) url('images/trash/globo.png') center no-repeat;">
+                <div class="hover-profile-picture" style="background-image: url('images/trash/rga.png');">
                 </div>
-                <img src="images/trash/elton.jpg" alt="">
+                <img src="images/trash/fabricio-teixeira.jpg" alt="">
               </div>
               <div class="speaker-profile-informations">
                 <span class="speaker-name">Fabrício Teixeira</span>
                 <span class="speaker-job">UX na R/GA - New York</span>
                 <span class="speaker-description">
-                  Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai.
+                  Publicitário e mestre em Interactive Media. Experience Design Director na R/GA e coautor de um dos maiores blogs sobre UX e IA no Brasil. 
                 </span>
                 <ul class="social-links">
                   <li class="twitter">
-                    <a href="#">Twitter</a>
+                    <a href="https://twitter.com/fabriciot" target="_blank">Twitter</a>
                   </li>
                   <li class="facebook">
-                    <a href="#">Facebook</a>
+                    <a href="https://www.facebook.com/fabricioteixeira" target="_blank">Facebook</a>
                   </li>
                   <li class="linkedin">
-                    <a href="#">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/fabricioteixeira/pt" target="_blank">LinkedIn</a>
                   </li>
                   <li class="keynote">
-                    <a href="#">Keynote</a>
+                    <a href="#" target="_blank">Keynote</a>
                   </li>
                 </ul>
               </div>
             </li>
+
             <li class="speaker-item">
               <div class="speaker-profile-picture">
-                <div class="hover-profile-picture" style="background: rgba(26, 188, 156, 0.5) url('images/trash/globo.png') center no-repeat;">
+                <div class="hover-profile-picture" style="background-image: url('images/trash/coderockr.png');">
                 </div>
-                <img src="images/trash/elton.jpg" alt="">
+                <img src="images/trash/elton-minetto.jpg" alt="">
               </div>
               <div class="speaker-profile-informations">
-                <span class="speaker-name">Fabrício Teixeira</span>
-                <span class="speaker-job">UX na R/GA - New York</span>
+                <span class="speaker-name">Elton Minetto</span>
+                <span class="speaker-job">CEO na Coderockr</span>
                 <span class="speaker-description">
-                  Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai.
+                  Autor do livros Frameworks para Desenvolvimento em PHP e Grid Computing in Research and Education. CEO da Coderockr.
                 </span>
                 <ul class="social-links">
                   <li class="twitter">
-                    <a href="#">Twitter</a>
+                    <a href="https://twitter.com/eminetto" target="_blank">Twitter</a>
                   </li>
                   <li class="facebook">
-                    <a href="#">Facebook</a>
+                    <a href="https://www.facebook.com/eminetto" target="_blank">Facebook</a>
                   </li>
                   <li class="linkedin">
-                    <a href="#">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/eminetto/pt" target="_blank">LinkedIn</a>
                   </li>
                   <li class="keynote">
-                    <a href="#">Keynote</a>
+                    <a href="#" target="_blank">Keynote</a>
                   </li>
                 </ul>
               </div>
             </li>
+
             <li class="speaker-item">
               <div class="speaker-profile-picture">
-                <div class="hover-profile-picture" style="background: rgba(26, 188, 156, 0.5) url('images/trash/globo.png') center no-repeat;">
+                <div class="hover-profile-picture" style="background-image: url('images/trash/locaweb.png');">
                 </div>
-                <img src="images/trash/elton.jpg" alt="">
+                <img src="images/trash/marcio-trindade.jpg" alt="">
               </div>
               <div class="speaker-profile-informations">
-                <span class="speaker-name">Fabrício Teixeira</span>
-                <span class="speaker-job">UX na R/GA - New York</span>
+                <span class="speaker-name">Marcio Trindade</span>
+                <span class="speaker-job">Programador na Locaweb</span>
                 <span class="speaker-description">
-                  Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai.
+                  Desenvolvedor Ruby desde 2008. Gerente de desenvolvimento na Digital Pages e programador na Locaweb. 
                 </span>
                 <ul class="social-links">
                   <li class="twitter">
-                    <a href="#">Twitter</a>
+                    <a href="https://twitter.com/marciotrindade" target="_blank">Twitter</a>
                   </li>
                   <li class="facebook">
-                    <a href="#">Facebook</a>
+                    <a href="https://www.facebook.com/marcio.trindade" target="_blank">Facebook</a>
                   </li>
                   <li class="linkedin">
-                    <a href="#">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/marciotrindade" target="_blank">LinkedIn</a>
                   </li>
                   <li class="keynote">
-                    <a href="#">Keynote</a>
+                    <a href="#" target="_blank">Keynote</a>
                   </li>
                 </ul>
               </div>
             </li>
+
+            <li class="speaker-item">
+              <div class="speaker-profile-picture">
+                <div class="hover-profile-picture" style="background-image: url('images/trash/em-breve.png');"></div>
+                <img src="images/trash/darth-vader.png" alt="">
+              </div>
+              <div class="speaker-profile-informations">
+                <span class="speaker-name">Darth Vader</span>
+                <span class="speaker-job">CEO das Galáxias</span>
+                <span class="speaker-description">
+                  Desenvolvedor Ruby desde a era antiga. Gerente de desenvolvimento orbital e programador interestelar. 
+                </span>
+              </div>
+            </li>
+
+            <li class="speaker-item">
+              <div class="speaker-profile-picture">
+                <div class="hover-profile-picture" style="background-image: url('images/trash/em-breve.png');"></div>
+                <img src="images/trash/princesa-leia.png" alt="">
+              </div>
+              <div class="speaker-profile-informations">
+                <span class="speaker-name">Princesa Leia</span>
+                <span class="speaker-job">Desenvolvedora das Galáxias</span>
+                <span class="speaker-description">
+                  Desenvolvedora Ruby desde a era antiga. Gerente de desenvolvimento orbital e programadora interestelar.
+                </span>
+              </div>
+            </li>
+
+            <li class="speaker-item">
+              <div class="speaker-profile-picture">
+                <div class="hover-profile-picture" style="background-image: url('images/trash/em-breve.png');"></div>
+                <img src="images/trash/mestre-yoda.png" alt="">
+              </div>
+              <div class="speaker-profile-informations">
+                <span class="speaker-name">Mestre Yoda</span>
+                <span class="speaker-job">Desenvolvedor das Galáxias</span>
+                <span class="speaker-description">
+                  Desenvolvedor Ruby desde a era antiga. Gerente de desenvolvimento orbital e programador interestelar.
+                </span>
+              </div>
+            </li>
+
+            <li class="speaker-item">
+              <div class="speaker-profile-picture">
+                <div class="hover-profile-picture" style="background-image: url('images/trash/em-breve.png');"></div>
+                <img src="images/trash/c3po.png" alt="">
+              </div>
+              <div class="speaker-profile-informations">
+                <span class="speaker-name">c3po</span>
+                <span class="speaker-job">Desenvolvedor das Galáxias</span>
+                <span class="speaker-description">
+                  Desenvolvedor Ruby desde a era antiga. Gerente de desenvolvimento orbital e programador interestelar.
+                </span>
+              </div>
+            </li>
+
+            <li class="speaker-item">
+              <div class="speaker-profile-picture">
+                <div class="hover-profile-picture" style="background-image: url('images/trash/em-breve.png');"></div>
+                <img src="images/trash/chewbacca.png" alt="">
+              </div>
+              <div class="speaker-profile-informations">
+                <span class="speaker-name">chewbacca</span>
+                <span class="speaker-job">Desenvolvedor das Galáxias</span>
+                <span class="speaker-description">
+                  Desenvolvedor Ruby desde a era antiga. Gerente de desenvolvimento orbital e programador interestelar.
+                </span>
+              </div>
+            </li>
+
           </ul>
         </div>
 
